// FoodOrder-System — CSDL PostgreSQL (DBML)
// Nguồn: BTL_FoodMenu.sql
// Lưu ý: Script SQL không tạo FOREIGN KEY cho orders.address_id;
//        ứng dụng vẫn dùng address_id trỏ tới user_addresses.id.

Project FoodOrder {
  database_type: "PostgreSQL"
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null]
  description varchar(255)
  image_url varchar(500)
  is_active boolean [default: true]
}

Table foods {
  id int [pk, increment]
  category_id int [not null, ref: > categories.id]
  name varchar(150) [not null]
  description text
  price decimal [not null]
  image_url varchar(500)
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  rating decimal [default: 0]
  review_count int [default: 0]
}

Table users {
  id int [pk, increment]
  username varchar(80) [not null, unique]
  email varchar(150) [not null, unique]
  password_hash varchar(255) [not null]
  full_name varchar(120) [not null]
  phone varchar(30)
  created_at timestamp [default: `now()`]
}

Table user_addresses {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  label varchar(80)
  recipient_name varchar(120)
  phone varchar(30)
  address_line varchar(500) [not null]
  province varchar(120)
  district varchar(120)
  latitude double
  longitude double
  is_default boolean [not null, default: false]
  created_at timestamp [default: `now()`]
}

Table cart_items {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  food_id int [not null, ref: > foods.id]
  quantity int [not null]

  Note: "UNIQUE (user_id, food_id); CHECK quantity > 0"
}

Table orders {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  total_price decimal [not null, default: 0]
  status int [not null, default: 0]
  address_id int [not null, ref: > user_addresses.id]
  created_at timestamp [default: `now()`]

  Note: "status: 0 chờ xác nhận .. 4 đã hủy. FK address_id logic theo ứng dụng."
}

Table order_items {
  order_id int [pk, ref: > orders.id]
  food_id int [pk, ref: > foods.id]
  quantity int [not null]
  price decimal [not null]
}

Table order_status_logs {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  status int [not null]
  note varchar(255)
  update_time timestamp [default: `now()`]
}

Table reviews {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  user_id int [not null, ref: > users.id]
  food_id int [not null, ref: > foods.id]
  rating int [not null]
  comment varchar(500)
  created_at timestamp [default: `now()`]

  Note: "UNIQUE (order_id, user_id, food_id); CHECK rating 1..5"
}

Table notifications {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  title varchar(150) [not null]
  message varchar(500) [not null]
  type varchar(20) [not null, default: 'SYSTEM']
  is_read boolean [not null, default: false]
  created_at timestamp [default: `now()`]
}

Table vouchers {
  id int [pk, increment]
  code varchar(50) [not null, unique]
  title varchar(150) [not null]
  description varchar(500)
  discount_type varchar(20) [not null]
  discount_value decimal [not null, default: 0]
  min_order_value decimal [not null, default: 0]
  max_discount_amount decimal
  usage_limit int
  used_count int [not null, default: 0]
  expiry_date date [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [default: `now()`]
  promo_scope varchar(30) [default: 'ALL']

  Note: "discount_type: PERCENT | AMOUNT | FREESHIP"
}

Table user_vouchers {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  voucher_id int [not null, ref: > vouchers.id]
  claimed_at timestamp [default: `now()`]

  Note: "UNIQUE (user_id, voucher_id)"
}

Table voucher_usage {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  voucher_id int [not null, ref: > vouchers.id]
  order_id int [ref: > orders.id]
  discount_amount decimal [not null, default: 0]
  used_at timestamp [default: `now()`]

  Note: "order_id NULL được phép; SQL ON DELETE SET NULL"
}
